<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etDatum"
        android:inputType="date"
        android:hint="@string/etDatumString"
        android:importantForAutofill="no"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buDatum"
        android:text="@string/buDatumString"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDatum" />

    <TextView
        android:id="@+id/tvDatum"
        android:text="@string/tvDatumString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toEndOf="@+id/buDatum"
        app:layout_constraintTop_toBottomOf="@+id/etDatum" />

    <EditText
        android:id="@+id/etUhrzeit"
        android:inputType="time"
        android:hint="@string/etUhrzeitString"
        android:importantForAutofill="no"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buDatum" />

    <Button
        android:id="@+id/buUhrzeit"
        android:text="@string/buUhrzeitString"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUhrzeit" />

    <TextView
        android:id="@+id/tvUhrzeit"
        android:text="@string/tvUhrzeitString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toEndOf="@+id/buUhrzeit"
        app:layout_constraintTop_toBottomOf="@+id/etUhrzeit" />

</androidx.constraintlayout.widget.ConstraintLayout>
